[package]
name = "hob-api"
version = "0.1.0"
authors = ["Daniel Poage <dan.poage@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
